feat: replace most of about sheet with bio data
